<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="FB_GCM" Id="{d03d0435-a8a4-4ab2-9d39-a304a183952d}" SpecialFunc="None">
    <Declaration><![CDATA[(* For Baratron Pressure Gauge *)
(*The full-scale pressure times the ratio of the meas.
voltage to full-scale voltage (10V).
The minimum pressure is always going to be 5e-4 * F.S.V.*)
FUNCTION_BLOCK FB_GCM
VAR_IN_OUT

END_VAR
VAR_OUTPUT
    {attribute 'pytmc' := 'pv:'}
    PG	:	ST_VG;
END_VAR
VAR_INPUT
    i_rFULL_SCALE : REAL;
END_VAR
VAR
    rMinPressure: REAL;
    rHYST_PERC	:	REAL := 0.80;	// Hysteresis percentage
    rV	:REAL;
    iTermBits: UINT := 32767 ; // The terminal's maximum value in bits
    (*IO*)
    i_iPRESS_R AT%I* :INT; // input Pressure // Link to analog Input
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Baratron Pressure Calc
A. Wallace
2016-6-16
The full-scale pressure times the ratio of the meas.
voltage to full-scale voltage (10V).
The minimum pressure is always going to be 5e-4 * F.S.V.*)
PG.rFULL_SCALE := i_rFULL_SCALE;
rMinPressure := PG.rFULL_SCALE * 5E-4;

If (iTermBits=0) THEN iTermBits := 32767;END_IF
rV :=MAX((10*INT_TO_REAL(PG.i_iPRESS_R)/iTermBits),0);

PG.rPRESS := (PG.rFULL_SCALE/10)*rV;
IF PG.rPRESS > (rMinPressure)THEN
    PG.xPRESS_OK := TRUE;
    PG.eState := Valid;
ELSE
    PG.xPRESS_OK := FALSE;
    PG.eState := PressInvalid;
END_IF

(*IO soft linking*)
ACT_IO();]]></ST>
    </Implementation>
    <Action Name="ACT_IO" Id="{c1214d74-d1dc-47d0-8d43-06819891a8d4}">
      <Implementation>
        <ST><![CDATA[PG.i_iPRESS_R :=i_iPRESS_R;]]></ST>
      </Implementation>
    </Action>
    <Method Name="M_SetBits" Id="{ef0f5032-cc49-4110-b8a4-5e654a7699b0}">
      <Declaration><![CDATA[METHOD M_SetBits : BOOL
VAR_INPUT
    TermBits : UINT; // The terminal's maximum value in bits
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[This^.iTermBits := TermBits;]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>