<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="FB_ITR90" Id="{d1491968-690d-4aa1-ab30-fd64b81089f0}" SpecialFunc="None">
    <Declaration><![CDATA[(* This function block implements the Oerlikon Leybold IONVAC Hot Cathode ITR 90*)
FUNCTION_BLOCK FB_ITR90
VAR_INPUT
END_VAR
VAR_OUTPUT
    {attribute 'pytmc' := '
    pv:
    '}
    PG : ST_VG;
END_VAR
VAR
    rV : REAL;	// input voltage
    rC: REAL := -0.125; // a constant in the manual (pressure unit dependent)
    rK: REAL := 1.0;// Calibration factor C (gas type dependent)
    iTermBits: UINT := 32767 ; // The terminal's maximum value in bits
    (*IO*)
    i_iPRESS_R AT%I* :INT; // input Pressure // Link to analog Input
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* This function block implements the Oerlikon Leybold IONVAC Hot Cathode ITR 90*)

(* Real-value calculation *)

rV := 10*INT_TO_REAL(PG.i_iPRESS_R)/iTermBits;
PG.rPRESS := (LREAL_TO_REAL(EXPT(10,(rV-7.75)/0.75+rC))) * rK;


(* Pressure gauge State checks *)

//IF (rV <=9.7 ) AND (rV>=1) THEN
    //PG.eState := Valid; // normal
IF rV >= 0.5 AND rV <= 4.5 THEN
    PG.eState := ValidLo; //LO
ELSIF rV > 4.5 AND rV<= 9.9 THEN
    PG.eState := ValidHi; //HIGH
ELSIF rV < 0.5 THEN
    PG.eState := GaugeDisconnected; //not on
ELSE
    PG.eState := PressInvalid; //other fault - could be no gauge, controller powering up etc
END_IF



(* Pressure gauge OK checks *)
PG.xPRESS_OK := (rV <=9.9 ) AND (rV>=0.5);


(* Setpoint evaluation *)
PG.xAT_VAC := PG.xPRESS_OK AND PG.rPRESS < PG.rVAC_SP;


(*Soft IO Linking*)
ACT_IO();
]]></ST>
    </Implementation>
    <Action Name="ACT_IO" Id="{81c379a6-172c-4570-83b8-3e8d0fcae295}">
      <Implementation>
        <ST><![CDATA[PG.i_iPRESS_R :=i_iPRESS_R;]]></ST>
      </Implementation>
    </Action>
    <Method Name="M_SetBits" Id="{2b56ae4c-1065-4c58-8da0-22d0f327520b}">
      <Declaration><![CDATA[METHOD M_SetBits : BOOL
VAR_INPUT
    TermBits : UINT; // The terminal's maximum value in bits
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[If (iTermBits=0) THEN iTermBits := 32767;END_IF
This^.iTermBits := TermBits;]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>